# stellar-mlops

./: .gitignore  .pre-commit-config.yaml  CROSS_SYSTEM_DEBUG.md  DEPLOYMENT_CHECKLIST.md  Dockerfile  QUICK_FIX_SUMMARY.md  README.md  SETUP_GUIDE.md  activate.sh  airflow.cfg  debug_services.sh  debug_setup.sh  docker-compose.yml  error.md  fix_docker.sh  pyproject.toml  requirements.txt  setup.sh  start.sh  stop.sh  system_diagnostic.sh  validate.sh
Notebook/: stellar-classification.ipynb
airflow/dags/: stellar_pipeline_dag.py
api/: stellar_main.py
config/datasets/: stellar.yaml
data/raw/: star_classification_clean.csv
mlruns/379769089265839969/: meta.yaml
mlruns/379769089265839969/042ff3b87949479daf0ccdacfb57c510/: meta.yaml
mlruns/379769089265839969/14f9eca249d6491a9a94db0fce92db96/: meta.yaml
mlruns/379769089265839969/1804f30c8b13492d9df0d1ca898e88c3/: meta.yaml
mlruns/379769089265839969/2c483a5efa744d4dadf24b7377d13c21/: meta.yaml
mlruns/379769089265839969/2d150401bf124f148ff6c6dfaa229196/: meta.yaml
mlruns/379769089265839969/37f27e4ed9bf45a6b7dc8eeb0ca9335c/: meta.yaml
mlruns/379769089265839969/3b6bdaac8a9c48e4bf07f7a5b57f8121/: meta.yaml
mlruns/379769089265839969/410863b3e66247d58eee7988398a12b5/: meta.yaml
mlruns/379769089265839969/4b6dc316a01f46038c5b79b36740e840/: meta.yaml
mlruns/379769089265839969/5248b8fbf7b640ce981bf076ffb887dd/: meta.yaml
mlruns/379769089265839969/5749fb98110b4f4d905ea75382fddcba/: meta.yaml
mlruns/379769089265839969/7a0640f9d0d6402fbf72ddd4abd762ea/: meta.yaml
mlruns/379769089265839969/82a5836caf864dea8a68384fd574818e/: meta.yaml
mlruns/379769089265839969/98056647a7ec4a0aa506f126866000f0/: meta.yaml
mlruns/379769089265839969/a68b5c9ab26649e6bd05e3f54f767c36/: meta.yaml
mlruns/379769089265839969/d90e9587338a42ad9768c9aa650a6a2a/: meta.yaml
mlruns/379769089265839969/e23944819c674279a6f46859a13a9e90/: meta.yaml
mlruns/379769089265839969/e43245889d724b42b7ea372725df6d09/: meta.yaml
models/: feature_names.json  model_info.json
sql/: init.sql
src/: db_utils.py  stellar_ingestion.py  test_module.py
src/stellar_ingestion/: __init__.py  ingestion.py  training.py
(+232 files in other folders)
