[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "stellar-classification-mlops"
version = "1.0.0"
description = "Production-ready MLOps pipeline for stellar classification using SDSS17 dataset"
authors = [
    {name = "MLOps Team", email = "mlops-team@stellar-classification.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
keywords = ["mlops", "astronomy", "classification", "airflow", "mlflow"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "apache-airflow>=2.5.0",
    "mlflow>=2.0.0",
    "fastapi>=0.100.0",
    "scikit-learn>=1.3.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/mahatoankit/stellar-mlops"
Repository = "https://github.com/mahatoankit/stellar-mlops.git"
Documentation = "https://github.com/mahatoankit/stellar-mlops#readme"
"Bug Reports" = "https://github.com/mahatoankit/stellar-mlops/issues"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["stellar_ingestion", "stellar_training", "db_utils"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
exclude = [
    "mlruns/",
    "logs/",
    "data/",
]